--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# sensitive data (except example files)
+instance/*
+!instance/example_*
+
 # cache
 __pycache__/*
 
@@ -6,3 +10,9 @@ __pycache__/*
 
 # ide
 .idea
+
+# unit tests
+openatlas/tests/.coverage
+openatlas/tests/cover
+.coverage
+cover
